[workspace]
resolver = "2"
members = [
    "rdx-hyperclock",
    "rdx-hypershell",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = { version = "0.14", features = ["toml"] }
