[package]
name = "rdx-hypershell"
version = "0.2.0"
edition = "2021"
authors = ["qodeninja <1043235+qodeninja@users.noreply.github.com>"]
description = "An interactive shell for the Hyperclock phase engine."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustadex/hyperclock"
readme = "README.md"
keywords = ["hyperclock", "shell", "repl", "rdx", "phase-engine"]
categories = ["command-line-utilities"]
publish = false

[[bin]]
name = "hypershell" 
path = "src/main.rs"

[dependencies]
hyperclock = { package = "rdx-hyperclock", path = "../rdx-hyperclock" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rustyline = "14.0"
tracing-subscriber = { workspace = true }
config = { version = "0.14", features = ["toml"] } # The shell might load a config file
colored = { workspace = true }
slotmap = { workspace = true }
rustyline-derive = "0.10.0"
